force-app/main/default/objects/QuickLinks__c/QuickLinks__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>QuickLinks</label>
</CustomObject>