force-app/main/default/objects/QuickLinks__c/fields/Column_Id__c.field-meta.xml
<CustomField>
    <fullName>Column_Id__c</fullName>
    <description>Id used for link gruping in columns</description>
    <label>Column Id</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>