force-app/main/default/objects/QuickLinks__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Icon to be shown with link in format category#type i.e. utility#moneybag</description>
    <label>Icon</label>
    <length>64</length>
    <type>Text</type>
</CustomField>