force-app/main/default/objects/QuickLinks__c/fields/Label_del__c.field-meta.xml
<CustomField>
    <fullName>Label_del__c</fullName>
    <description>Label for link</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>