force-app/main/default/objects/QuickLinks__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Url</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>