force-app/main/default/objects/QuickLinks__c/fields/Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Link_Description__c</fullName>
    <label>Link Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>