force-app/main/default/objects/QuickLinks__c/fields/Object_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Object_Visibility__c</fullName>
    <description>Used to filter the object that the links will appear on.</description>
    <inlineHelpText>Please specify the object that these links need to appear on. (use commas to separate the values if multiple are specified eg. Home Page,Opportunity)</inlineHelpText>
    <label>Object Visibility</label>
    <type>TextArea</type>
</CustomField>