force-app/main/default/objects/QuickLinks__c/fields/Show_for_Division__c.field-meta.xml
<CustomField>
    <fullName>Show_for_Division__c</fullName>
    <description>Used to filter which user division can view the link</description>
    <inlineHelpText>Please specify the user division this link will be visible to. ( use commas to separate if multiple are specified)</inlineHelpText>
    <label>Show for Division</label>
    <type>TextArea</type>
</CustomField>