force-app/main/default/objects/QuickLinks__c/fields/Tile_Column_Id__c.field-meta.xml
<CustomField>
    <fullName>Tile_Column_Id__c</fullName>
    <label>Tile Column Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>